[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/enemy/enemy.gd" type="Script" id=1]
[ext_resource path="res://scenes/enemy/EnemyFinal.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 468.221

[sub_resource type="Animation" id=2]
resource_name = "standing"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 6 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walking"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 12, 19 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 63.463, 211.357 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1067.49, 447.208 )

[sub_resource type="OccluderPolygon2D" id=6]
polygon = PoolVector2Array( -57.4877, -111.365, -64.6375, -116.926, -64.6375, -121.296, -67.8152, -121.693, -73.7734, -126.46, -71.7873, -131.623, -69.4041, -137.979, -67.418, -145.526, -65.0347, -152.278, -63.4459, -159.031, -61.0626, -164.989, -56.6932, -171.742, -49.5434, -178.892, -44.3796, -179.686, -32.4632, -184.453, -18.5607, -184.453, -3.46664, -183.658, 4.47764, -182.864, 12.0247, -178.097, 17.5857, -173.331, 21.1606, -169.359, 25.9272, -163.798, 28.7076, -156.251, 28.7076, -148.704, 32.2826, -145.526, 33.077, -141.156, 34.2686, -134.404, 31.4881, -131.623, 33.077, -122.487, 27.9132, -117.721, 24.3383, -112.557, 19.5717, -106.996, 17.9829, -103.421, 24.3383, -95.4769, 28.3104, -91.8714, 30.6937, -90.2826, 31.4881, -87.8993, 31.8854, -81.5439, 33.077, -79.5578, 35.0631, -77.5718, 38.2408, -72.8051, 38.2408, -38.6448, 35.4603, -21.9618, 34.6659, 43.1812, 29.5021, 53.1115, 27.516, 172.642, 37.4463, 190.914, 34.2686, 200.844, -13.397, 210.775, -51.9267, 213.555, -64.6375, 207.597, -69.4041, 88.433, -87.6759, 71.3529, -88.8675, 31.6315, -90.8536, -52.1501, -86.4842, -78.3662, -71.7873, -93.8575, -56.6932, -103.788 )

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( -1, 0 )
script = ExtResource( 1 )

[node name="body" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]
position = Vector2( 2.21179, 4.42355 )
shape = SubResource( 1 )

[node name="EnemySprite" type="Sprite" parent="."]
position = Vector2( -1.02532, -1.0252 )
texture = ExtResource( 2 )
vframes = 2
hframes = 12
frame = 6
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationEnemy" type="AnimationPlayer" parent="EnemySprite"]
anims/standing = SubResource( 2 )
anims/walking = SubResource( 3 )

[node name="EnemyCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="VisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 1.60651, -1.84299 )
shape = SubResource( 5 )
disabled = true

[node name="LightBox" type="LightOccluder2D" parent="."]
occluder = SubResource( 6 )
